Bug 212160 - usr.sbin/newsyslog/legacy_test:main fails on ^/head@r304099
Summary: usr.sbin/newsyslog/legacy_test:main fails on ^/head@r304099
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Enji Cooper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-25 19:25 UTC by Enji Cooper
Modified: 2017-07-20 00:44 UTC (History)
0 users

See Also:
ngie: mfc-stable11+
ngie: mfc-stable10+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enji Cooper freebsd_committer freebsd_triage 2016-08-25 19:25:26 UTC
$ sudo kyua debug -k usr.sbin/newsyslog/Kyuafile legacy_test:main
...
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zVk0e9X to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
ok 92 - rotate time 1 
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zTtCYKv to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 93 - rotate time 2 
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.z5TtDtU to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 94 - rotate time 3 
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zWAMK3o to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 95 - rotate time 4 
ls: foo.log.*: No such file or directory
ls: foo.log.*: No such file or directory
ok 96 - noaction 
ok 97 - create file gz
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zgjSmsk to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
ok 98 - rotate time 1 gz
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zJ9V9WL to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 99 - rotate time 2 gz
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zYmd5Wz to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 100 - rotate time 3 gz
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zrpwEdo to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 101 - rotate time 4 gz
ls: foo.log.*gz: No such file or directory
ls: foo.log.*gz: No such file or directory
ok 102 - noaction gz
ok 103 - create file bz2
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zTkqLhW to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
ok 104 - rotate time 1 bz2
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zt0gkDs to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 105 - rotate time 2 bz2
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zHA7emc to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 106 - rotate time 3 bz2
newsyslog: can't mv /tmp/kyua.tap-tester.7pmJ0o/work/log.zvVM2ds to /tmp/kyua.tap-tester.7pmJ0o/work/log: Is a directory
not ok 107 - rotate time 4 bz2
ls: foo.log.*bz2: No such file or directory
ls: foo.log.*bz2: No such file or directory
...
legacy_test:main  ->  failed: 9 tests of 126 failed
Comment 1 Enji Cooper freebsd_committer freebsd_triage 2016-08-25 19:30:00 UTC
Might be related to basename/dirname changes.. let me do some digging...
Comment 2 Enji Cooper freebsd_committer freebsd_triage 2016-08-25 19:41:01 UTC
r303449 wasn't the culprit.
Comment 3 Enji Cooper freebsd_committer freebsd_triage 2016-08-25 20:12:46 UTC
Not r301532 either...
Comment 4 commit-hook freebsd_committer freebsd_triage 2016-08-29 18:46:47 UTC
A commit references this bug:

Author: ngie
Date: Mon Aug 29 18:46:05 UTC 2016
New revision: 305011
URL: https://svnweb.freebsd.org/changeset/base/305011

Log:
  Expect sub testcases 2-4 in :tests_time_rotate to fail today due to changes
  to newsyslog, etc made in the past month.

  The issue is being root-caused as part of the bug noted below. This commit
  will need to be partially reverted once the issue has been found/fixed

  PR:		212160
  Reported by:	Jenkins
  Sponsored by:	EMC / Isilon Storage Division

Changes:
  head/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 5 Enji Cooper freebsd_committer freebsd_triage 2016-09-01 19:19:26 UTC
It's failing on ^/stable/10 too:

usr.sbin/newsyslog/legacy_test:main  ->  failed: 9 tests of 126 failed  [37.084s]

Hmm.. I wonder if it's related to my environment/build options because I install less than GENERIC does (which Jenkins consumes..).
Comment 6 Enji Cooper freebsd_committer freebsd_triage 2016-09-01 19:20:01 UTC
(In reply to Ngie Cooper from comment #5)

Oh wait. Wrong VM -- that one's running ^/head // i386 :/.. False alarm!
Comment 7 commit-hook freebsd_committer freebsd_triage 2017-06-03 18:10:26 UTC
A commit references this bug:

Author: ngie
Date: Sat Jun  3 18:10:04 UTC 2017
New revision: 319545
URL: https://svnweb.freebsd.org/changeset/base/319545

Log:
  Don't execute the TODO cases in a subshell

  This messes up the testcase counter, as seen in bug 219756.

  PR:		212160, 219756
  Sponsored by:	Dell EMC Isilon

Changes:
  head/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 8 commit-hook freebsd_committer freebsd_triage 2017-06-03 18:20:40 UTC
A commit references this bug:

Author: ngie
Date: Sat Jun  3 18:20:24 UTC 2017
New revision: 319548
URL: https://svnweb.freebsd.org/changeset/base/319548

Log:
  Remove TODO for sub testcases added for bug 212160

  On closer inspection, the past failures no longer occur on ^/head.

  PR:		212160
  Sponsored by:	Dell EMC Isilon

Changes:
  head/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 9 commit-hook freebsd_committer freebsd_triage 2017-07-20 00:42:46 UTC
A commit references this bug:

Author: ngie
Date: Thu Jul 20 00:41:47 UTC 2017
New revision: 321262
URL: https://svnweb.freebsd.org/changeset/base/321262

Log:
  MFC r318960,r319545,r319546,r319548,r321261:

  r318960 (by dab):

  Add newsyslog capability to write RFC5424 compliant rotation message.

  This modification adds the capability to newsyslog to write the
  rotation message in a format that is compliant with RFC5424. This
  capability is enabled on a per-log file basis through a new value
  ("T") in the flags field in newsyslog.conf. This is useful on systems
  that use the RFC5424 format for log files so that the rotation message
  format matches that of the other log messages. There has been recent
  mention of adding an RFC5424 compliant mode to syslogd and at least
  one alternative system log daemon (rsyslogd) that already has the
  capability to use that format.

  Relnotes:	yes

  r319545:

  Don't execute the TODO cases in a subshell

  This messes up the testcase counter, as seen in bug 219756.

  PR:		212160, 219756

  r319546:

  Fix the testplan after ^/head@r318960

  The number of executed testcases is 128, not 126.

  MFC with:	r318960

  r319548:

  Remove TODO for sub testcases added for bug 212160

  On closer inspection, the past failures no longer occur on ^/head.

  PR:		212160

  r321261:

  Clean up leading whitespace (convert single column spaces to hard tabs)

Changes:
_U  stable/11/
  stable/11/usr.sbin/newsyslog/extern.h
  stable/11/usr.sbin/newsyslog/newsyslog.8
  stable/11/usr.sbin/newsyslog/newsyslog.c
  stable/11/usr.sbin/newsyslog/newsyslog.conf.5
  stable/11/usr.sbin/newsyslog/ptimes.c
  stable/11/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 10 commit-hook freebsd_committer freebsd_triage 2017-07-20 00:42:49 UTC
A commit references this bug:

Author: ngie
Date: Thu Jul 20 00:41:47 UTC 2017
New revision: 321262
URL: https://svnweb.freebsd.org/changeset/base/321262

Log:
  MFC r318960,r319545,r319546,r319548,r321261:

  r318960 (by dab):

  Add newsyslog capability to write RFC5424 compliant rotation message.

  This modification adds the capability to newsyslog to write the
  rotation message in a format that is compliant with RFC5424. This
  capability is enabled on a per-log file basis through a new value
  ("T") in the flags field in newsyslog.conf. This is useful on systems
  that use the RFC5424 format for log files so that the rotation message
  format matches that of the other log messages. There has been recent
  mention of adding an RFC5424 compliant mode to syslogd and at least
  one alternative system log daemon (rsyslogd) that already has the
  capability to use that format.

  Relnotes:	yes

  r319545:

  Don't execute the TODO cases in a subshell

  This messes up the testcase counter, as seen in bug 219756.

  PR:		212160, 219756

  r319546:

  Fix the testplan after ^/head@r318960

  The number of executed testcases is 128, not 126.

  MFC with:	r318960

  r319548:

  Remove TODO for sub testcases added for bug 212160

  On closer inspection, the past failures no longer occur on ^/head.

  PR:		212160

  r321261:

  Clean up leading whitespace (convert single column spaces to hard tabs)

Changes:
_U  stable/11/
  stable/11/usr.sbin/newsyslog/extern.h
  stable/11/usr.sbin/newsyslog/newsyslog.8
  stable/11/usr.sbin/newsyslog/newsyslog.c
  stable/11/usr.sbin/newsyslog/newsyslog.conf.5
  stable/11/usr.sbin/newsyslog/ptimes.c
  stable/11/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 11 commit-hook freebsd_committer freebsd_triage 2017-07-20 00:44:53 UTC
A commit references this bug:

Author: ngie
Date: Thu Jul 20 00:44:02 UTC 2017
New revision: 321263
URL: https://svnweb.freebsd.org/changeset/base/321263

Log:
  MFC r318960,r319545,r319546,r319548,r321261:

  r318960 (by dab):

  Add newsyslog capability to write RFC5424 compliant rotation message.

  This modification adds the capability to newsyslog to write the
  rotation message in a format that is compliant with RFC5424. This
  capability is enabled on a per-log file basis through a new value
  ("T") in the flags field in newsyslog.conf. This is useful on systems
  that use the RFC5424 format for log files so that the rotation message
  format matches that of the other log messages. There has been recent
  mention of adding an RFC5424 compliant mode to syslogd and at least
  one alternative system log daemon (rsyslogd) that already has the
  capability to use that format.

  Relnotes:	yes

  r319545:

  Don't execute the TODO cases in a subshell

  This messes up the testcase counter, as seen in bug 219756.

  PR:		212160, 219756

  r319546:

  Fix the testplan after ^/head@r318960

  The number of executed testcases is 128, not 126.

  MFC with:	r318960

  r319548:

  Remove TODO for sub testcases added for bug 212160

  On closer inspection, the past failures no longer occur on ^/head.

  PR:		212160

  r321261:

  Clean up leading whitespace (convert single column spaces to hard tabs)

Changes:
_U  stable/10/
  stable/10/usr.sbin/newsyslog/extern.h
  stable/10/usr.sbin/newsyslog/newsyslog.8
  stable/10/usr.sbin/newsyslog/newsyslog.c
  stable/10/usr.sbin/newsyslog/newsyslog.conf.5
  stable/10/usr.sbin/newsyslog/ptimes.c
  stable/10/usr.sbin/newsyslog/tests/legacy_test.sh
Comment 12 commit-hook freebsd_committer freebsd_triage 2017-07-20 00:44:56 UTC
A commit references this bug:

Author: ngie
Date: Thu Jul 20 00:44:02 UTC 2017
New revision: 321263
URL: https://svnweb.freebsd.org/changeset/base/321263

Log:
  MFC r318960,r319545,r319546,r319548,r321261:

  r318960 (by dab):

  Add newsyslog capability to write RFC5424 compliant rotation message.

  This modification adds the capability to newsyslog to write the
  rotation message in a format that is compliant with RFC5424. This
  capability is enabled on a per-log file basis through a new value
  ("T") in the flags field in newsyslog.conf. This is useful on systems
  that use the RFC5424 format for log files so that the rotation message
  format matches that of the other log messages. There has been recent
  mention of adding an RFC5424 compliant mode to syslogd and at least
  one alternative system log daemon (rsyslogd) that already has the
  capability to use that format.

  Relnotes:	yes

  r319545:

  Don't execute the TODO cases in a subshell

  This messes up the testcase counter, as seen in bug 219756.

  PR:		212160, 219756

  r319546:

  Fix the testplan after ^/head@r318960

  The number of executed testcases is 128, not 126.

  MFC with:	r318960

  r319548:

  Remove TODO for sub testcases added for bug 212160

  On closer inspection, the past failures no longer occur on ^/head.

  PR:		212160

  r321261:

  Clean up leading whitespace (convert single column spaces to hard tabs)

Changes:
_U  stable/10/
  stable/10/usr.sbin/newsyslog/extern.h
  stable/10/usr.sbin/newsyslog/newsyslog.8
  stable/10/usr.sbin/newsyslog/newsyslog.c
  stable/10/usr.sbin/newsyslog/newsyslog.conf.5
  stable/10/usr.sbin/newsyslog/ptimes.c
  stable/10/usr.sbin/newsyslog/tests/legacy_test.sh